Fixed Navbar z-index issue

--- a/src/components/Navigation/Navbar/Navbar.module.scss
+++ b/src/components/Navigation/Navbar/Navbar.module.scss
@@ -14,6 +14,7 @@
   top: 0;
   left: 0;
   transition: height 0.2s linear;
+  z-index: 10; //Higher than backdrop z-index
 
   &.ShrinkNavbar {
     height: 5rem;
