--- a/src/components/Navigation/SearchBar/SearchBar.module.scss
+++ b/src/components/Navigation/SearchBar/SearchBar.module.scss
@@ -18,13 +18,13 @@
   transition: all 0.2s ease;
 
   &.ShrinkInput {
-    padding: .4rem 3rem .6rem 1rem;
+    padding: 0.4rem 3rem 0.6rem 1rem;
     font-size: 1.4rem;
   }
 
   @include respond($TABLET) {
     font-size: 2.3rem;
-    border-bottom: 1px solid var(--primary);
+    border-bottom: 1px solid var(--white);
   }
 
   &::placeholder {
@@ -36,11 +36,11 @@
 
   &:focus {
     outline: none;
-    border: 1px solid var(--primary);
+    border: 1px solid var(--white);
     border-radius: 2rem;
 
     @include respond($TABLET) {
-      border-bottom: 1px solid var(--primary);
+      border-bottom: 1px solid var(--white);
     }
   }
 }
