--- a/src/components/UI/Backdrop/Backdrop.module.scss
+++ b/src/components/UI/Backdrop/Backdrop.module.scss
@@ -7,7 +7,7 @@
   right: 1rem;
   width: 60px;
   height: 60px;
-  background-color: rgba($backdrop, 0.7);
+  background-color: rgba($backdrop, 0.8);
   border-radius: 50%;
   z-index: 5;
   transform: scale(0);
